<resources>
    <string name="app_name">ADMIN</string>
    <string name="camera_button_text">Upload</string>
    <string name="sign_in_prompt">Sign In to begin</string>
    <string name="take_photo_prompt">Upload a Photo</string>
    <string name="download">Download</string>
    <string name="sign_in_anonymously">Sign In</string>
    <string name="rationale_storage">This sample reads images from your camera to demonstrate uploading.</string>
    <string name="label_link">Link to Uploaded File</string>
    <string name="label_download">Download File</string>
    <string name="log_out">Log out</string>
    <string name="success">Success</string>
    <string name="add">ADD PRODUCT</string>
    <string name="view">VIEW PRODUCT</string>
    <string name="viewC">VIEW CUSTOMER</string>
    <string name="viewO">VIEW ORDER</string>
    <string name="login">LOGIN USER</string>

    <string name="register">REGISTER YOURSELF</string>
    <string name="registerU">REGISTER USER</string>

    <string name="ShoeTupe">SHOE TYPE</string>


    <string name="progress_downloading">Downloading…</string>
    <string name="progress_uploading">Uploading…</string>
    <string name="progress_auth">Signing In…</string>

    <string name="upload_success">Upload finished</string>
    <string name="upload_failure">Upload failed</string>\

    <string name="download_success">Download finished</string>
    <string name="download_failure">Download failure</string>

    <string name="store_name" translatable="false">My Online Store</string>
    <string name="googlepay_status_unavailable" translatable="false">Unfortunately, Google Pay is not available on this phone.</string>
    <string name="googlepay_status_checking" translatable="false">Checking if Google Pay is available...</string>
    <string name="payments_show_name" translatable="false">Successfully received payment data for %s!</string>

    <string name="googlepay_button_content_description" translatable="false">Google Pay</string>
    <string name="buy_with_googlepay_button_content_description" translatable="false">Buy with Google Pay</string>
    <string name="save_to_googlepay_button_content_description" translatable="false">Save to Google Pay</string>
    <string name="add_to_googlepay_button_content_description" translatable="false">Add to Google Pay</string>

</resources>
